--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .python-version
+Testing note/ve_nha.txt
+.gitignore
+Testing note/Self_Attention_for_Transformer_Neural_Networks.ipynb
+Testing note/Mutlihead_Attention.ipynb
