--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Testing note/ve_nha.txt
 .gitignore
 Testing note/Self_Attention_for_Transformer_Neural_Networks.ipynb
 Testing note/Mutlihead_Attention.ipynb
+Testing note
