gitignore MLrun file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Testing note/ve_nha.txt
 Testing note/Self_Attention_for_Transformer_Neural_Networks.ipynb
 Testing note/Mutlihead_Attention.ipynb
 Testing note
+mlartifacts
+mlruns
