--- a/mlruns/401552666814250793/194ff29211ee46dda721216fa943f1c7/meta.yaml
+++ b/mlruns/401552666814250793/194ff29211ee46dda721216fa943f1c7/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/194ff29211ee46dda721216fa943f1c7/artifacts
+deleted_time: 1747988034312
 end_time: 1747455796985
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 194ff29211ee46dda721216fa943f1c7
 run_name: unequaled-quail-349
 run_uuid: 194ff29211ee46dda721216fa943f1c7
