--- a/mlruns/401552666814250793/3706cd21b836476dae7fc13baaf720f1/meta.yaml
+++ b/mlruns/401552666814250793/3706cd21b836476dae7fc13baaf720f1/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/3706cd21b836476dae7fc13baaf720f1/artifacts
+deleted_time: 1747988034309
 end_time: 1747456699117
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 3706cd21b836476dae7fc13baaf720f1
 run_name: big-skink-582
 run_uuid: 3706cd21b836476dae7fc13baaf720f1
