--- a/mlruns/401552666814250793/3d3aefbc213547b39229ee9bde4ab290/meta.yaml
+++ b/mlruns/401552666814250793/3d3aefbc213547b39229ee9bde4ab290/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/3d3aefbc213547b39229ee9bde4ab290/artifacts
+deleted_time: 1747988034306
 end_time: 1747456979500
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 3d3aefbc213547b39229ee9bde4ab290
 run_name: adorable-yak-168
 run_uuid: 3d3aefbc213547b39229ee9bde4ab290
