--- a/mlruns/401552666814250793/4a42aab33f51442db95df48a902c27f5/meta.yaml
+++ b/mlruns/401552666814250793/4a42aab33f51442db95df48a902c27f5/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/4a42aab33f51442db95df48a902c27f5/artifacts
+deleted_time: 1747988034313
 end_time: 1747455060856
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 4a42aab33f51442db95df48a902c27f5
 run_name: nebulous-roo-408
 run_uuid: 4a42aab33f51442db95df48a902c27f5
