--- a/mlruns/401552666814250793/51867fceda4843eda8772a29c0bef5e7/meta.yaml
+++ b/mlruns/401552666814250793/51867fceda4843eda8772a29c0bef5e7/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/51867fceda4843eda8772a29c0bef5e7/artifacts
+deleted_time: 1747988034307
 end_time: 1747456972963
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 51867fceda4843eda8772a29c0bef5e7
 run_name: auspicious-calf-579
 run_uuid: 51867fceda4843eda8772a29c0bef5e7
