--- a/mlruns/401552666814250793/5523b311e77a4ce8a463afe15191a603/meta.yaml
+++ b/mlruns/401552666814250793/5523b311e77a4ce8a463afe15191a603/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/5523b311e77a4ce8a463afe15191a603/artifacts
+deleted_time: 1747988034313
 end_time: 1747455052725
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 5523b311e77a4ce8a463afe15191a603
 run_name: luminous-owl-290
 run_uuid: 5523b311e77a4ce8a463afe15191a603
