--- a/mlruns/401552666814250793/6945959709014840b9b18e68d862c9c4/meta.yaml
+++ b/mlruns/401552666814250793/6945959709014840b9b18e68d862c9c4/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/6945959709014840b9b18e68d862c9c4/artifacts
+deleted_time: 1747988034300
 end_time: 1747457078444
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 6945959709014840b9b18e68d862c9c4
 run_name: melodic-zebra-9
 run_uuid: 6945959709014840b9b18e68d862c9c4
