--- a/mlruns/401552666814250793/74ab093e66c5454cbedbb09849a758b0/meta.yaml
+++ b/mlruns/401552666814250793/74ab093e66c5454cbedbb09849a758b0/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/74ab093e66c5454cbedbb09849a758b0/artifacts
+deleted_time: 1747988034309
 end_time: 1747456703125
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 74ab093e66c5454cbedbb09849a758b0
 run_name: useful-zebra-938
 run_uuid: 74ab093e66c5454cbedbb09849a758b0
