--- a/mlruns/401552666814250793/7ba39afc61ee412c9b4ea81a1ab76da3/meta.yaml
+++ b/mlruns/401552666814250793/7ba39afc61ee412c9b4ea81a1ab76da3/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/7ba39afc61ee412c9b4ea81a1ab76da3/artifacts
+deleted_time: 1747988034311
 end_time: 1747456502267
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 7ba39afc61ee412c9b4ea81a1ab76da3
 run_name: intrigued-cub-69
 run_uuid: 7ba39afc61ee412c9b4ea81a1ab76da3
