--- a/mlruns/401552666814250793/93f4ed9446b1469e86374d81b9493a39/meta.yaml
+++ b/mlruns/401552666814250793/93f4ed9446b1469e86374d81b9493a39/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/93f4ed9446b1469e86374d81b9493a39/artifacts
+deleted_time: 1747988034305
 end_time: 1747457005651
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 93f4ed9446b1469e86374d81b9493a39
 run_name: overjoyed-snipe-955
 run_uuid: 93f4ed9446b1469e86374d81b9493a39
