--- a/mlruns/401552666814250793/98b6a32394cd4d3dad98a365237a5635/meta.yaml
+++ b/mlruns/401552666814250793/98b6a32394cd4d3dad98a365237a5635/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/98b6a32394cd4d3dad98a365237a5635/artifacts
+deleted_time: 1747988034301
 end_time: 1747457075945
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 98b6a32394cd4d3dad98a365237a5635
 run_name: orderly-shrew-184
 run_uuid: 98b6a32394cd4d3dad98a365237a5635
