--- a/mlruns/401552666814250793/9b73958876b64356a86ed16f7e58f579/meta.yaml
+++ b/mlruns/401552666814250793/9b73958876b64356a86ed16f7e58f579/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/9b73958876b64356a86ed16f7e58f579/artifacts
+deleted_time: 1747988034312
 end_time: 1747455792980
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 9b73958876b64356a86ed16f7e58f579
 run_name: incongruous-fowl-520
 run_uuid: 9b73958876b64356a86ed16f7e58f579
