--- a/mlruns/401552666814250793/a882caa8b9e648b8bcbf465859e56b10/meta.yaml
+++ b/mlruns/401552666814250793/a882caa8b9e648b8bcbf465859e56b10/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/a882caa8b9e648b8bcbf465859e56b10/artifacts
+deleted_time: 1747988034308
 end_time: 1747456838192
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: a882caa8b9e648b8bcbf465859e56b10
 run_name: unruly-sloth-214
 run_uuid: a882caa8b9e648b8bcbf465859e56b10
