--- a/mlruns/401552666814250793/dc7143627c3d473589c447aee370c0e9/meta.yaml
+++ b/mlruns/401552666814250793/dc7143627c3d473589c447aee370c0e9/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/dc7143627c3d473589c447aee370c0e9/artifacts
+deleted_time: 1747988034311
 end_time: 1747456505000
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: dc7143627c3d473589c447aee370c0e9
 run_name: powerful-bass-450
 run_uuid: dc7143627c3d473589c447aee370c0e9
