--- a/mlruns/401552666814250793/e149508aa01e48328fb8747f7b5ed4eb/meta.yaml
+++ b/mlruns/401552666814250793/e149508aa01e48328fb8747f7b5ed4eb/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/e149508aa01e48328fb8747f7b5ed4eb/artifacts
+deleted_time: 1747988034309
 end_time: 1747456611478
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: e149508aa01e48328fb8747f7b5ed4eb
 run_name: adaptable-midge-160
 run_uuid: e149508aa01e48328fb8747f7b5ed4eb
