--- a/mlruns/401552666814250793/ee682e34537a44218e3ee04a131385d5/meta.yaml
+++ b/mlruns/401552666814250793/ee682e34537a44218e3ee04a131385d5/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: mlflow-artifacts:/401552666814250793/ee682e34537a44218e3ee04a131385d5/artifacts
+deleted_time: 1747988034307
 end_time: 1747456842317
 entry_point_name: ''
 experiment_id: '401552666814250793'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: ee682e34537a44218e3ee04a131385d5
 run_name: amazing-frog-344
 run_uuid: ee682e34537a44218e3ee04a131385d5
