--- a/flwr-torch-multiheadattention/pyproject.toml
+++ b/flwr-torch-multiheadattention/pyproject.toml
@@ -27,11 +27,12 @@ clientapp = "flwr_torch_multiheadattention.client_app:app"
 [tool.flwr.app.config]
 num-server-rounds = 3
 fraction-fit = 0.5
-local-epochs = 300
+local-epochs = 400
 
 [tool.flwr.federations]
 default = "local-simulation"
 
 [tool.flwr.federations.local-simulation]
-options.num-supernodes = 5
-options.backend.client-resources.num-cpus = 8
+options.num-supernodes = 8
+options.backend.client-resources.num-cpus = 4
+# options.backend.client-resources.num-gpus = 1
