--- a/flwr-torch-lstm/pyproject.toml
+++ b/flwr-torch-lstm/pyproject.toml
@@ -34,5 +34,5 @@ default = "local-simulation"
 
 [tool.flwr.federations.local-simulation]
 options.num-supernodes = 4
-options.backend.client-resources.num-cpus = 4
-options.backend.client-resources.num-gpus = 0.5
+options.backend.client-resources.num-cpus = 8
+# options.backend.client-resources.num-gpus = 0.5
